sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/README.md
# @azure/arm-deviceregistry client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-deviceregistry in some common scenarios.

| **File Name**                                                                                                 | **Description**                                                                                                                           |
| ------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------- |
| [assetEndpointProfilesCreateOrReplaceSample.js][assetendpointprofilescreateorreplacesample]                   | create a AssetEndpointProfile x-ms-original-file: 2025-10-01/CreateOrReplace_AssetEndpointProfile.json                                    |
| [assetEndpointProfilesDeleteSample.js][assetendpointprofilesdeletesample]                                     | delete a AssetEndpointProfile x-ms-original-file: 2025-10-01/Delete_AssetEndpointProfile.json                                             |
| [assetEndpointProfilesGetSample.js][assetendpointprofilesgetsample]                                           | get a AssetEndpointProfile x-ms-original-file: 2025-10-01/Get_AssetEndpointProfile.json                                                   |
| [assetEndpointProfilesListByResourceGroupSample.js][assetendpointprofileslistbyresourcegroupsample]           | list AssetEndpointProfile resources by resource group x-ms-original-file: 2025-10-01/List_AssetEndpointProfiles_ByResourceGroup.json      |
| [assetEndpointProfilesListBySubscriptionSample.js][assetendpointprofileslistbysubscriptionsample]             | list AssetEndpointProfile resources by subscription ID x-ms-original-file: 2025-10-01/List_AssetEndpointProfiles_BySubscription.json      |
| [assetEndpointProfilesUpdateSample.js][assetendpointprofilesupdatesample]                                     | update a AssetEndpointProfile x-ms-original-file: 2025-10-01/Update_AssetEndpointProfile.json                                             |
| [assetsCreateOrReplaceSample.js][assetscreateorreplacesample]                                                 | create a Asset x-ms-original-file: 2025-10-01/CreateOrReplace_Asset_With_DiscoveredAssetRef.json                                          |
| [assetsDeleteSample.js][assetsdeletesample]                                                                   | delete a Asset x-ms-original-file: 2025-10-01/Delete_Asset.json                                                                           |
| [assetsGetSample.js][assetsgetsample]                                                                         | get a Asset x-ms-original-file: 2025-10-01/Get_Asset.json                                                                                 |
| [assetsListByResourceGroupSample.js][assetslistbyresourcegroupsample]                                         | list Asset resources by resource group x-ms-original-file: 2025-10-01/List_Assets_ByResourceGroup.json                                    |
| [assetsListBySubscriptionSample.js][assetslistbysubscriptionsample]                                           | list Asset resources by subscription ID x-ms-original-file: 2025-10-01/List_Assets_BySubscription.json                                    |
| [assetsUpdateSample.js][assetsupdatesample]                                                                   | update a Asset x-ms-original-file: 2025-10-01/Update_Asset.json                                                                           |
| [billingContainersGetSample.js][billingcontainersgetsample]                                                   | get a BillingContainer x-ms-original-file: 2025-10-01/Get_BillingContainer.json                                                           |
| [billingContainersListBySubscriptionSample.js][billingcontainerslistbysubscriptionsample]                     | list BillingContainer resources by subscription ID x-ms-original-file: 2025-10-01/List_BillingContainers_BySubscription.json              |
| [namespaceAssetsCreateOrReplaceSample.js][namespaceassetscreateorreplacesample]                               | create a NamespaceAsset x-ms-original-file: 2025-10-01/CreateOrReplace_NamespaceAsset.json                                                |
| [namespaceAssetsDeleteSample.js][namespaceassetsdeletesample]                                                 | delete a NamespaceAsset x-ms-original-file: 2025-10-01/Delete_NamespaceAsset.json                                                         |
| [namespaceAssetsGetSample.js][namespaceassetsgetsample]                                                       | get a NamespaceAsset x-ms-original-file: 2025-10-01/Get_NamespaceAsset.json                                                               |
| [namespaceAssetsListByResourceGroupSample.js][namespaceassetslistbyresourcegroupsample]                       | list NamespaceAsset resources by Namespace x-ms-original-file: 2025-10-01/List_NamespaceAssets_ByResourceGroup.json                       |
| [namespaceAssetsUpdateSample.js][namespaceassetsupdatesample]                                                 | update a NamespaceAsset x-ms-original-file: 2025-10-01/Update_NamespaceAsset.json                                                         |
| [namespaceDevicesCreateOrReplaceSample.js][namespacedevicescreateorreplacesample]                             | create a NamespaceDevice x-ms-original-file: 2025-10-01/CreateOrReplace_NamespaceDevice.json                                              |
| [namespaceDevicesDeleteSample.js][namespacedevicesdeletesample]                                               | delete a NamespaceDevice x-ms-original-file: 2025-10-01/Delete_NamespaceDevice.json                                                       |
| [namespaceDevicesGetSample.js][namespacedevicesgetsample]                                                     | get a NamespaceDevice x-ms-original-file: 2025-10-01/Get_NamespaceDevice.json                                                             |
| [namespaceDevicesListByResourceGroupSample.js][namespacedeviceslistbyresourcegroupsample]                     | list NamespaceDevice resources by Namespace x-ms-original-file: 2025-10-01/List_NamespaceDevices_ByResourceGroup.json                     |
| [namespaceDevicesUpdateSample.js][namespacedevicesupdatesample]                                               | update a NamespaceDevice x-ms-original-file: 2025-10-01/Update_NamespaceDevice.json                                                       |
| [namespaceDiscoveredAssetsCreateOrReplaceSample.js][namespacediscoveredassetscreateorreplacesample]           | create a NamespaceDiscoveredAsset x-ms-original-file: 2025-10-01/CreateOrReplace_NamespaceDiscoveredAsset.json                            |
| [namespaceDiscoveredAssetsDeleteSample.js][namespacediscoveredassetsdeletesample]                             | delete a NamespaceDiscoveredAsset x-ms-original-file: 2025-10-01/Delete_NamespaceDiscoveredAsset.json                                     |
| [namespaceDiscoveredAssetsGetSample.js][namespacediscoveredassetsgetsample]                                   | get a NamespaceDiscoveredAsset x-ms-original-file: 2025-10-01/Get_NamespaceDiscoveredAsset.json                                           |
| [namespaceDiscoveredAssetsListByResourceGroupSample.js][namespacediscoveredassetslistbyresourcegroupsample]   | list NamespaceDiscoveredAsset resources by Namespace x-ms-original-file: 2025-10-01/List_NamespaceDiscoveredAssets_ByResourceGroup.json   |
| [namespaceDiscoveredAssetsUpdateSample.js][namespacediscoveredassetsupdatesample]                             | update a NamespaceDiscoveredAsset x-ms-original-file: 2025-10-01/Update_NamespaceDiscoveredAsset.json                                     |
| [namespaceDiscoveredDevicesCreateOrReplaceSample.js][namespacediscovereddevicescreateorreplacesample]         | create a NamespaceDiscoveredDevice x-ms-original-file: 2025-10-01/CreateOrReplace_NamespaceDiscoveredDevice.json                          |
| [namespaceDiscoveredDevicesDeleteSample.js][namespacediscovereddevicesdeletesample]                           | delete a NamespaceDiscoveredDevice x-ms-original-file: 2025-10-01/Delete_NamespaceDiscoveredDevice.json                                   |
| [namespaceDiscoveredDevicesGetSample.js][namespacediscovereddevicesgetsample]                                 | get a NamespaceDiscoveredDevice x-ms-original-file: 2025-10-01/Get_NamespaceDiscoveredDevice.json                                         |
| [namespaceDiscoveredDevicesListByResourceGroupSample.js][namespacediscovereddeviceslistbyresourcegroupsample] | list NamespaceDiscoveredDevice resources by Namespace x-ms-original-file: 2025-10-01/List_NamespaceDiscoveredDevices_ByResourceGroup.json |
| [namespaceDiscoveredDevicesUpdateSample.js][namespacediscovereddevicesupdatesample]                           | update a NamespaceDiscoveredDevice x-ms-original-file: 2025-10-01/Update_NamespaceDiscoveredDevice.json                                   |
| [namespacesCreateOrReplaceSample.js][namespacescreateorreplacesample]                                         | create a Namespace x-ms-original-file: 2025-10-01/CreateOrReplace_Namespace_With_Endpoints.json                                           |
| [namespacesDeleteSample.js][namespacesdeletesample]                                                           | delete a Namespace x-ms-original-file: 2025-10-01/Delete_Namespace.json                                                                   |
| [namespacesGetSample.js][namespacesgetsample]                                                                 | get a Namespace x-ms-original-file: 2025-10-01/Get_Namespace.json                                                                         |
| [namespacesListByResourceGroupSample.js][namespaceslistbyresourcegroupsample]                                 | list Namespace resources by resource group x-ms-original-file: 2025-10-01/List_Namespace_ByResourceGroup.json                             |
| [namespacesListBySubscriptionSample.js][namespaceslistbysubscriptionsample]                                   | list Namespace resources by subscription ID x-ms-original-file: 2025-10-01/List_Namespace_BySubscription.json                             |
| [namespacesMigrateSample.js][namespacesmigratesample]                                                         | migrate the resources into Namespace x-ms-original-file: 2025-10-01/Migrate_Assets_Namespace.json                                         |
| [namespacesUpdateSample.js][namespacesupdatesample]                                                           | update a Namespace x-ms-original-file: 2025-10-01/Update_Namespace_Endpoints.json                                                         |
| [operationStatusGetSample.js][operationstatusgetsample]                                                       | returns the current status of an async operation. x-ms-original-file: 2025-10-01/Get_OperationStatus.json                                 |
| [operationsListSample.js][operationslistsample]                                                               | list the operations for the provider x-ms-original-file: 2025-10-01/List_Operations.json                                                  |
| [schemaRegistriesCreateOrReplaceSample.js][schemaregistriescreateorreplacesample]                             | create a SchemaRegistry x-ms-original-file: 2025-10-01/CreateOrReplace_SchemaRegistry.json                                                |
| [schemaRegistriesDeleteSample.js][schemaregistriesdeletesample]                                               | delete a SchemaRegistry x-ms-original-file: 2025-10-01/Delete_SchemaRegistry.json                                                         |
| [schemaRegistriesGetSample.js][schemaregistriesgetsample]                                                     | get a SchemaRegistry x-ms-original-file: 2025-10-01/Get_SchemaRegistry.json                                                               |
| [schemaRegistriesListByResourceGroupSample.js][schemaregistrieslistbyresourcegroupsample]                     | list SchemaRegistry resources by resource group x-ms-original-file: 2025-10-01/List_SchemaRegistries_ByResourceGroup.json                 |
| [schemaRegistriesListBySubscriptionSample.js][schemaregistrieslistbysubscriptionsample]                       | list SchemaRegistry resources by subscription ID x-ms-original-file: 2025-10-01/List_SchemaRegistries_BySubscription.json                 |
| [schemaRegistriesUpdateSample.js][schemaregistriesupdatesample]                                               | update a SchemaRegistry x-ms-original-file: 2025-10-01/Update_SchemaRegistry.json                                                         |
| [schemaVersionsCreateOrReplaceSample.js][schemaversionscreateorreplacesample]                                 | create a SchemaVersion x-ms-original-file: 2025-10-01/CreateOrReplace_SchemaVersion.json                                                  |
| [schemaVersionsDeleteSample.js][schemaversionsdeletesample]                                                   | delete a SchemaVersion x-ms-original-file: 2025-10-01/Delete_SchemaVersion.json                                                           |
| [schemaVersionsGetSample.js][schemaversionsgetsample]                                                         | get a SchemaVersion x-ms-original-file: 2025-10-01/Get_SchemaVersion.json                                                                 |
| [schemaVersionsListBySchemaSample.js][schemaversionslistbyschemasample]                                       | list SchemaVersion resources by Schema x-ms-original-file: 2025-10-01/List_SchemaVersions_BySchema.json                                   |
| [schemasCreateOrReplaceSample.js][schemascreateorreplacesample]                                               | create a Schema x-ms-original-file: 2025-10-01/CreateOrReplace_Schema.json                                                                |
| [schemasDeleteSample.js][schemasdeletesample]                                                                 | delete a Schema x-ms-original-file: 2025-10-01/Delete_Schema.json                                                                         |
| [schemasGetSample.js][schemasgetsample]                                                                       | get a Schema x-ms-original-file: 2025-10-01/Get_Schema.json                                                                               |
| [schemasListBySchemaRegistrySample.js][schemaslistbyschemaregistrysample]                                     | list Schema resources by SchemaRegistry x-ms-original-file: 2025-10-01/List_Schemas_BySchemaRegistry.json                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node assetEndpointProfilesCreateOrReplaceSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node assetEndpointProfilesCreateOrReplaceSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[assetendpointprofilescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetEndpointProfilesCreateOrReplaceSample.js
[assetendpointprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetEndpointProfilesDeleteSample.js
[assetendpointprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetEndpointProfilesGetSample.js
[assetendpointprofileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetEndpointProfilesListByResourceGroupSample.js
[assetendpointprofileslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetEndpointProfilesListBySubscriptionSample.js
[assetendpointprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetEndpointProfilesUpdateSample.js
[assetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetsCreateOrReplaceSample.js
[assetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetsDeleteSample.js
[assetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetsGetSample.js
[assetslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetsListByResourceGroupSample.js
[assetslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetsListBySubscriptionSample.js
[assetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/assetsUpdateSample.js
[billingcontainersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/billingContainersGetSample.js
[billingcontainerslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/billingContainersListBySubscriptionSample.js
[namespaceassetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceAssetsCreateOrReplaceSample.js
[namespaceassetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceAssetsDeleteSample.js
[namespaceassetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceAssetsGetSample.js
[namespaceassetslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceAssetsListByResourceGroupSample.js
[namespaceassetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceAssetsUpdateSample.js
[namespacedevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDevicesCreateOrReplaceSample.js
[namespacedevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDevicesDeleteSample.js
[namespacedevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDevicesGetSample.js
[namespacedeviceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDevicesListByResourceGroupSample.js
[namespacedevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDevicesUpdateSample.js
[namespacediscoveredassetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredAssetsCreateOrReplaceSample.js
[namespacediscoveredassetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredAssetsDeleteSample.js
[namespacediscoveredassetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredAssetsGetSample.js
[namespacediscoveredassetslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredAssetsListByResourceGroupSample.js
[namespacediscoveredassetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredAssetsUpdateSample.js
[namespacediscovereddevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredDevicesCreateOrReplaceSample.js
[namespacediscovereddevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredDevicesDeleteSample.js
[namespacediscovereddevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredDevicesGetSample.js
[namespacediscovereddeviceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredDevicesListByResourceGroupSample.js
[namespacediscovereddevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespaceDiscoveredDevicesUpdateSample.js
[namespacescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespacesCreateOrReplaceSample.js
[namespacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespacesDeleteSample.js
[namespacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespacesGetSample.js
[namespaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespacesListByResourceGroupSample.js
[namespaceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespacesListBySubscriptionSample.js
[namespacesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespacesMigrateSample.js
[namespacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/namespacesUpdateSample.js
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/operationStatusGetSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/operationsListSample.js
[schemaregistriescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaRegistriesCreateOrReplaceSample.js
[schemaregistriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaRegistriesDeleteSample.js
[schemaregistriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaRegistriesGetSample.js
[schemaregistrieslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaRegistriesListByResourceGroupSample.js
[schemaregistrieslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaRegistriesListBySubscriptionSample.js
[schemaregistriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaRegistriesUpdateSample.js
[schemaversionscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaVersionsCreateOrReplaceSample.js
[schemaversionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaVersionsDeleteSample.js
[schemaversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaVersionsGetSample.js
[schemaversionslistbyschemasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemaVersionsListBySchemaSample.js
[schemascreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemasCreateOrReplaceSample.js
[schemasdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemasDeleteSample.js
[schemasgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemasGetSample.js
[schemaslistbyschemaregistrysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v1/javascript/schemasListBySchemaRegistrySample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-deviceregistry?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/deviceregistry/arm-deviceregistry/README.md
