sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/README.md
# @azure/arm-deviceregistry client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-deviceregistry in some common scenarios.

| **File Name**                                                                                                 | **Description**                                                                                                                                                                                                                      |
| ------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [assetEndpointProfilesCreateOrReplaceSample.js][assetendpointprofilescreateorreplacesample]                   | create a AssetEndpointProfile x-ms-original-file: 2026-11-01/CreateOrReplace_AssetEndpointProfile.json                                                                                                                               |
| [assetEndpointProfilesDeleteSample.js][assetendpointprofilesdeletesample]                                     | delete a AssetEndpointProfile x-ms-original-file: 2026-11-01/Delete_AssetEndpointProfile.json                                                                                                                                        |
| [assetEndpointProfilesGetSample.js][assetendpointprofilesgetsample]                                           | get a AssetEndpointProfile x-ms-original-file: 2026-11-01/Get_AssetEndpointProfile.json                                                                                                                                              |
| [assetEndpointProfilesListByResourceGroupSample.js][assetendpointprofileslistbyresourcegroupsample]           | list AssetEndpointProfile resources by resource group x-ms-original-file: 2026-11-01/List_AssetEndpointProfiles_ByResourceGroup.json                                                                                                 |
| [assetEndpointProfilesListBySubscriptionSample.js][assetendpointprofileslistbysubscriptionsample]             | list AssetEndpointProfile resources by subscription ID x-ms-original-file: 2026-11-01/List_AssetEndpointProfiles_BySubscription.json                                                                                                 |
| [assetEndpointProfilesUpdateSample.js][assetendpointprofilesupdatesample]                                     | update a AssetEndpointProfile x-ms-original-file: 2026-11-01/Update_AssetEndpointProfile.json                                                                                                                                        |
| [assetsCreateOrReplaceSample.js][assetscreateorreplacesample]                                                 | create a Asset x-ms-original-file: 2026-11-01/CreateOrReplace_Asset_With_DiscoveredAssetRef.json                                                                                                                                     |
| [assetsDeleteSample.js][assetsdeletesample]                                                                   | delete a Asset x-ms-original-file: 2026-11-01/Delete_Asset.json                                                                                                                                                                      |
| [assetsGetSample.js][assetsgetsample]                                                                         | get a Asset x-ms-original-file: 2026-11-01/Get_Asset.json                                                                                                                                                                            |
| [assetsListByResourceGroupSample.js][assetslistbyresourcegroupsample]                                         | list Asset resources by resource group x-ms-original-file: 2026-11-01/List_Assets_ByResourceGroup.json                                                                                                                               |
| [assetsListBySubscriptionSample.js][assetslistbysubscriptionsample]                                           | list Asset resources by subscription ID x-ms-original-file: 2026-11-01/List_Assets_BySubscription.json                                                                                                                               |
| [assetsUpdateSample.js][assetsupdatesample]                                                                   | update a Asset x-ms-original-file: 2026-11-01/Update_Asset.json                                                                                                                                                                      |
| [asyncOperationStatusGetSample.js][asyncoperationstatusgetsample]                                             | returns the current status of an async operation. x-ms-original-file: 2026-11-01/Get_AsyncOperationStatus.json                                                                                                                       |
| [billingContainersGetSample.js][billingcontainersgetsample]                                                   | get a BillingContainer x-ms-original-file: 2026-11-01/Get_BillingContainer.json                                                                                                                                                      |
| [billingContainersListBySubscriptionSample.js][billingcontainerslistbysubscriptionsample]                     | list BillingContainer resources by subscription ID x-ms-original-file: 2026-11-01/List_BillingContainers_BySubscription.json                                                                                                         |
| [certificateAuthoritiesActivateSample.js][certificateauthoritiesactivatesample]                               | activates a Certificate Authority of type `ICA` and issuer type `External`. If the Certificate Authority is an invalid type, the API responds with HTTP 400. x-ms-original-file: 2026-11-01/Activate_CertificateAuthority.json       |
| [certificateAuthoritiesCreateOrReplaceSample.js][certificateauthoritiescreateorreplacesample]                 | create a CertificateAuthority x-ms-original-file: 2026-11-01/CreateOrReplace_CertificateAuthority_ICAExternalIssuer.json                                                                                                             |
| [certificateAuthoritiesDeleteSample.js][certificateauthoritiesdeletesample]                                   | delete a CertificateAuthority x-ms-original-file: 2026-11-01/Delete_CertificateAuthority.json                                                                                                                                        |
| [certificateAuthoritiesGetSample.js][certificateauthoritiesgetsample]                                         | get a CertificateAuthority x-ms-original-file: 2026-11-01/Get_CertificateAuthority_ICAExternalIssuer.json                                                                                                                            |
| [certificateAuthoritiesListByNamespaceSample.js][certificateauthoritieslistbynamespacesample]                 | list CertificateAuthority resources by Namespace x-ms-original-file: 2026-11-01/List_CertificateAuthorities_ByNamespace.json                                                                                                         |
| [certificateAuthoritiesRevokeAndRotateSample.js][certificateauthoritiesrevokeandrotatesample]                 | revokes a Certificate Authority of type `ICA` and issuer type `Microsoft`. If the Certificate Authority is an invalid type, the API responds with HTTP 400. x-ms-original-file: 2026-11-01/RevokeAndRotate_CertificateAuthority.json |
| [certificateAuthoritiesUpdateSample.js][certificateauthoritiesupdatesample]                                   | update a CertificateAuthority x-ms-original-file: 2026-11-01/Update_CertificateAuthority.json                                                                                                                                        |
| [certificatePoliciesCreateOrReplaceSample.js][certificatepoliciescreateorreplacesample]                       | create a CertificatePolicy x-ms-original-file: 2026-11-01/CreateOrReplace_CertificatePolicy.json                                                                                                                                     |
| [certificatePoliciesDeleteSample.js][certificatepoliciesdeletesample]                                         | delete a CertificatePolicy x-ms-original-file: 2026-11-01/Delete_CertificatePolicy.json                                                                                                                                              |
| [certificatePoliciesGetSample.js][certificatepoliciesgetsample]                                               | get a CertificatePolicy x-ms-original-file: 2026-11-01/Get_CertificatePolicy.json                                                                                                                                                    |
| [certificatePoliciesListByCertificateAuthoritySample.js][certificatepolicieslistbycertificateauthoritysample] | list CertificatePolicy resources by CertificateAuthority x-ms-original-file: 2026-11-01/List_CertificatePolicies_ByCertificateAuthority.json                                                                                         |
| [certificatePoliciesUpdateSample.js][certificatepoliciesupdatesample]                                         | update a CertificatePolicy x-ms-original-file: 2026-11-01/Update_CertificatePolicy.json                                                                                                                                              |
| [namespaceAssetsCreateOrReplaceSample.js][namespaceassetscreateorreplacesample]                               | create a NamespaceAsset x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceAsset.json                                                                                                                                           |
| [namespaceAssetsDeleteSample.js][namespaceassetsdeletesample]                                                 | delete a NamespaceAsset x-ms-original-file: 2026-11-01/Delete_NamespaceAsset.json                                                                                                                                                    |
| [namespaceAssetsExecuteActionSample.js][namespaceassetsexecuteactionsample]                                   | a long-running resource action. x-ms-original-file: 2026-11-01/ExecuteAction_Assets_Namespace.json                                                                                                                                   |
| [namespaceAssetsGetSample.js][namespaceassetsgetsample]                                                       | get a NamespaceAsset x-ms-original-file: 2026-11-01/Get_NamespaceAsset.json                                                                                                                                                          |
| [namespaceAssetsListByNamespaceSample.js][namespaceassetslistbynamespacesample]                               | list NamespaceAsset resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceAssets_ByNamespace.json                                                                                                                      |
| [namespaceAssetsUpdateSample.js][namespaceassetsupdatesample]                                                 | update a NamespaceAsset x-ms-original-file: 2026-11-01/Update_NamespaceAsset.json                                                                                                                                                    |
| [namespaceDevicesCreateOrReplaceSample.js][namespacedevicescreateorreplacesample]                             | create a NamespaceDevice x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceDevice.json                                                                                                                                         |
| [namespaceDevicesDeleteSample.js][namespacedevicesdeletesample]                                               | delete a NamespaceDevice x-ms-original-file: 2026-11-01/Delete_NamespaceDevice.json                                                                                                                                                  |
| [namespaceDevicesGetSample.js][namespacedevicesgetsample]                                                     | get a NamespaceDevice x-ms-original-file: 2026-11-01/Get_NamespaceDevice.json                                                                                                                                                        |
| [namespaceDevicesListByNamespaceSample.js][namespacedeviceslistbynamespacesample]                             | list NamespaceDevice resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceDevices_ByNamespace.json                                                                                                                    |
| [namespaceDevicesUpdateSample.js][namespacedevicesupdatesample]                                               | update a NamespaceDevice x-ms-original-file: 2026-11-01/Update_NamespaceDevice.json                                                                                                                                                  |
| [namespaceDiscoveredAssetsCreateOrReplaceSample.js][namespacediscoveredassetscreateorreplacesample]           | create a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceDiscoveredAsset.json                                                                                                                       |
| [namespaceDiscoveredAssetsDeleteSample.js][namespacediscoveredassetsdeletesample]                             | delete a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/Delete_NamespaceDiscoveredAsset.json                                                                                                                                |
| [namespaceDiscoveredAssetsGetSample.js][namespacediscoveredassetsgetsample]                                   | get a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/Get_NamespaceDiscoveredAsset.json                                                                                                                                      |
| [namespaceDiscoveredAssetsListByNamespaceSample.js][namespacediscoveredassetslistbynamespacesample]           | list NamespaceDiscoveredAsset resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceDiscoveredAssets_ByNamespace.json                                                                                                  |
| [namespaceDiscoveredAssetsUpdateSample.js][namespacediscoveredassetsupdatesample]                             | update a NamespaceDiscoveredAsset x-ms-original-file: 2026-11-01/Update_NamespaceDiscoveredAsset.json                                                                                                                                |
| [namespaceDiscoveredDevicesCreateOrReplaceSample.js][namespacediscovereddevicescreateorreplacesample]         | create a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/CreateOrReplace_NamespaceDiscoveredDevice.json                                                                                                                     |
| [namespaceDiscoveredDevicesDeleteSample.js][namespacediscovereddevicesdeletesample]                           | delete a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/Delete_NamespaceDiscoveredDevice.json                                                                                                                              |
| [namespaceDiscoveredDevicesGetSample.js][namespacediscovereddevicesgetsample]                                 | get a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/Get_NamespaceDiscoveredDevice.json                                                                                                                                    |
| [namespaceDiscoveredDevicesListByNamespaceSample.js][namespacediscovereddeviceslistbynamespacesample]         | list NamespaceDiscoveredDevice resources by Namespace x-ms-original-file: 2026-11-01/List_NamespaceDiscoveredDevices_ByNamespace.json                                                                                                |
| [namespaceDiscoveredDevicesUpdateSample.js][namespacediscovereddevicesupdatesample]                           | update a NamespaceDiscoveredDevice x-ms-original-file: 2026-11-01/Update_NamespaceDiscoveredDevice.json                                                                                                                              |
| [namespacesCreateOrReplaceSample.js][namespacescreateorreplacesample]                                         | create a Namespace x-ms-original-file: 2026-11-01/CreateOrReplace_Namespace_With_ManagementEndpoints.json                                                                                                                            |
| [namespacesDeleteSample.js][namespacesdeletesample]                                                           | delete a Namespace x-ms-original-file: 2026-11-01/Delete_Namespace.json                                                                                                                                                              |
| [namespacesGetSample.js][namespacesgetsample]                                                                 | get a Namespace x-ms-original-file: 2026-11-01/Get_Namespace.json                                                                                                                                                                    |
| [namespacesListByResourceGroupSample.js][namespaceslistbyresourcegroupsample]                                 | list Namespace resources by resource group x-ms-original-file: 2026-11-01/List_Namespace_ByResourceGroup.json                                                                                                                        |
| [namespacesListBySubscriptionSample.js][namespaceslistbysubscriptionsample]                                   | list Namespace resources by subscription ID x-ms-original-file: 2026-11-01/List_Namespace_BySubscription.json                                                                                                                        |
| [namespacesMigrateSample.js][namespacesmigratesample]                                                         | migrate the resources into Namespace x-ms-original-file: 2026-11-01/Migrate_Assets_Namespace.json                                                                                                                                    |
| [namespacesUpdateSample.js][namespacesupdatesample]                                                           | update a Namespace x-ms-original-file: 2026-11-01/Update_Namespace_ManagementEndpoints.json                                                                                                                                          |
| [operationStatusGetSample.js][operationstatusgetsample]                                                       | returns the current status of an async operation. x-ms-original-file: 2026-11-01/Get_OperationStatus.json                                                                                                                            |
| [operationsListSample.js][operationslistsample]                                                               | list the operations for the provider x-ms-original-file: 2026-11-01/List_Operations.json                                                                                                                                             |
| [registryDevicesCreateOrReplaceSample.js][registrydevicescreateorreplacesample]                               | create a RegistryDevice x-ms-original-file: 2026-11-01/CreateOrReplace_RegistryDevice.json                                                                                                                                           |
| [registryDevicesDeleteSample.js][registrydevicesdeletesample]                                                 | delete a RegistryDevice x-ms-original-file: 2026-11-01/Delete_RegistryDevice.json                                                                                                                                                    |
| [registryDevicesGetSample.js][registrydevicesgetsample]                                                       | get a RegistryDevice x-ms-original-file: 2026-11-01/Get_RegistryDevice.json                                                                                                                                                          |
| [registryDevicesListByNamespaceSample.js][registrydeviceslistbynamespacesample]                               | list RegistryDevice resources by Namespace x-ms-original-file: 2026-11-01/List_RegistryDevices_ByNamespace.json                                                                                                                      |
| [registryDevicesUpdateSample.js][registrydevicesupdatesample]                                                 | update a RegistryDevice x-ms-original-file: 2026-11-01/Update_RegistryDevice.json                                                                                                                                                    |
| [schemaRegistriesCreateOrReplaceSample.js][schemaregistriescreateorreplacesample]                             | create a SchemaRegistry x-ms-original-file: 2026-11-01/CreateOrReplace_SchemaRegistry.json                                                                                                                                           |
| [schemaRegistriesDeleteSample.js][schemaregistriesdeletesample]                                               | delete a SchemaRegistry x-ms-original-file: 2026-11-01/Delete_SchemaRegistry.json                                                                                                                                                    |
| [schemaRegistriesGetSample.js][schemaregistriesgetsample]                                                     | get a SchemaRegistry x-ms-original-file: 2026-11-01/Get_SchemaRegistry.json                                                                                                                                                          |
| [schemaRegistriesListByResourceGroupSample.js][schemaregistrieslistbyresourcegroupsample]                     | list SchemaRegistry resources by resource group x-ms-original-file: 2026-11-01/List_SchemaRegistries_ByResourceGroup.json                                                                                                            |
| [schemaRegistriesListBySubscriptionSample.js][schemaregistrieslistbysubscriptionsample]                       | list SchemaRegistry resources by subscription ID x-ms-original-file: 2026-11-01/List_SchemaRegistries_BySubscription.json                                                                                                            |
| [schemaRegistriesUpdateSample.js][schemaregistriesupdatesample]                                               | update a SchemaRegistry x-ms-original-file: 2026-11-01/Update_SchemaRegistry.json                                                                                                                                                    |
| [schemaVersionsCreateOrReplaceSample.js][schemaversionscreateorreplacesample]                                 | create a SchemaVersion x-ms-original-file: 2026-11-01/CreateOrReplace_SchemaVersion.json                                                                                                                                             |
| [schemaVersionsDeleteSample.js][schemaversionsdeletesample]                                                   | delete a SchemaVersion x-ms-original-file: 2026-11-01/Delete_SchemaVersion.json                                                                                                                                                      |
| [schemaVersionsGetSample.js][schemaversionsgetsample]                                                         | get a SchemaVersion x-ms-original-file: 2026-11-01/Get_SchemaVersion.json                                                                                                                                                            |
| [schemaVersionsListBySchemaSample.js][schemaversionslistbyschemasample]                                       | list SchemaVersion resources by Schema x-ms-original-file: 2026-11-01/List_SchemaVersions_BySchema.json                                                                                                                              |
| [schemasCreateOrReplaceSample.js][schemascreateorreplacesample]                                               | create a Schema x-ms-original-file: 2026-11-01/CreateOrReplace_Schema.json                                                                                                                                                           |
| [schemasDeleteSample.js][schemasdeletesample]                                                                 | delete a Schema x-ms-original-file: 2026-11-01/Delete_Schema.json                                                                                                                                                                    |
| [schemasGetSample.js][schemasgetsample]                                                                       | get a Schema x-ms-original-file: 2026-11-01/Get_Schema.json                                                                                                                                                                          |
| [schemasListBySchemaRegistrySample.js][schemaslistbyschemaregistrysample]                                     | list Schema resources by SchemaRegistry x-ms-original-file: 2026-11-01/List_Schemas_BySchemaRegistry.json                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node assetEndpointProfilesCreateOrReplaceSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node assetEndpointProfilesCreateOrReplaceSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[assetendpointprofilescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetEndpointProfilesCreateOrReplaceSample.js
[assetendpointprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetEndpointProfilesDeleteSample.js
[assetendpointprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetEndpointProfilesGetSample.js
[assetendpointprofileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetEndpointProfilesListByResourceGroupSample.js
[assetendpointprofileslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetEndpointProfilesListBySubscriptionSample.js
[assetendpointprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetEndpointProfilesUpdateSample.js
[assetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetsCreateOrReplaceSample.js
[assetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetsDeleteSample.js
[assetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetsGetSample.js
[assetslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetsListByResourceGroupSample.js
[assetslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetsListBySubscriptionSample.js
[assetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/assetsUpdateSample.js
[asyncoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/asyncOperationStatusGetSample.js
[billingcontainersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/billingContainersGetSample.js
[billingcontainerslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/billingContainersListBySubscriptionSample.js
[certificateauthoritiesactivatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificateAuthoritiesActivateSample.js
[certificateauthoritiescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificateAuthoritiesCreateOrReplaceSample.js
[certificateauthoritiesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificateAuthoritiesDeleteSample.js
[certificateauthoritiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificateAuthoritiesGetSample.js
[certificateauthoritieslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificateAuthoritiesListByNamespaceSample.js
[certificateauthoritiesrevokeandrotatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificateAuthoritiesRevokeAndRotateSample.js
[certificateauthoritiesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificateAuthoritiesUpdateSample.js
[certificatepoliciescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificatePoliciesCreateOrReplaceSample.js
[certificatepoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificatePoliciesDeleteSample.js
[certificatepoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificatePoliciesGetSample.js
[certificatepolicieslistbycertificateauthoritysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificatePoliciesListByCertificateAuthoritySample.js
[certificatepoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/certificatePoliciesUpdateSample.js
[namespaceassetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceAssetsCreateOrReplaceSample.js
[namespaceassetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceAssetsDeleteSample.js
[namespaceassetsexecuteactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceAssetsExecuteActionSample.js
[namespaceassetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceAssetsGetSample.js
[namespaceassetslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceAssetsListByNamespaceSample.js
[namespaceassetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceAssetsUpdateSample.js
[namespacedevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDevicesCreateOrReplaceSample.js
[namespacedevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDevicesDeleteSample.js
[namespacedevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDevicesGetSample.js
[namespacedeviceslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDevicesListByNamespaceSample.js
[namespacedevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDevicesUpdateSample.js
[namespacediscoveredassetscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredAssetsCreateOrReplaceSample.js
[namespacediscoveredassetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredAssetsDeleteSample.js
[namespacediscoveredassetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredAssetsGetSample.js
[namespacediscoveredassetslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredAssetsListByNamespaceSample.js
[namespacediscoveredassetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredAssetsUpdateSample.js
[namespacediscovereddevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredDevicesCreateOrReplaceSample.js
[namespacediscovereddevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredDevicesDeleteSample.js
[namespacediscovereddevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredDevicesGetSample.js
[namespacediscovereddeviceslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredDevicesListByNamespaceSample.js
[namespacediscovereddevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespaceDiscoveredDevicesUpdateSample.js
[namespacescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespacesCreateOrReplaceSample.js
[namespacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespacesDeleteSample.js
[namespacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespacesGetSample.js
[namespaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespacesListByResourceGroupSample.js
[namespaceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespacesListBySubscriptionSample.js
[namespacesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespacesMigrateSample.js
[namespacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/namespacesUpdateSample.js
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/operationStatusGetSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/operationsListSample.js
[registrydevicescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/registryDevicesCreateOrReplaceSample.js
[registrydevicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/registryDevicesDeleteSample.js
[registrydevicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/registryDevicesGetSample.js
[registrydeviceslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/registryDevicesListByNamespaceSample.js
[registrydevicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/registryDevicesUpdateSample.js
[schemaregistriescreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaRegistriesCreateOrReplaceSample.js
[schemaregistriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaRegistriesDeleteSample.js
[schemaregistriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaRegistriesGetSample.js
[schemaregistrieslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaRegistriesListByResourceGroupSample.js
[schemaregistrieslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaRegistriesListBySubscriptionSample.js
[schemaregistriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaRegistriesUpdateSample.js
[schemaversionscreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaVersionsCreateOrReplaceSample.js
[schemaversionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaVersionsDeleteSample.js
[schemaversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaVersionsGetSample.js
[schemaversionslistbyschemasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemaVersionsListBySchemaSample.js
[schemascreateorreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemasCreateOrReplaceSample.js
[schemasdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemasDeleteSample.js
[schemasgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemasGetSample.js
[schemaslistbyschemaregistrysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/deviceregistry/arm-deviceregistry/samples/v2/javascript/schemasListBySchemaRegistrySample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-deviceregistry
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/deviceregistry/arm-deviceregistry/README.md
